# solar-plate-frontend

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
code/: Makefile  pylintrc  pyproject.toml  test.html
code/core/pages/: __init__.py  dashboard.py  login.py
code/core/services/api/: auth_service.py  solar_plate_service.py
code/setup/: config.py  main.py
code/setup/assets/: output.css
